# big-mac-index-streamlit

./: .gitpod.yml  LICENSE  README.md  pyproject.toml  requirements.txt
src/: the_big_mac_index.py
src/data/cleaned/: big-mac-source-data-plus-kaz.csv
src/notebooks/: workbook.ipynb
src/visualization/: __init__.py  visualize.py
