[tool.poetry]
name = "big-mac-index-streamlit"
version = "0.1.0"
description = ""
authors = ["Aidos Kanapyanov <aidos.kanapyanov@alumni.nu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.13.9"
ipython = "^8.4.0"
ipykernel = "^6.15.1"
black = "^22.6.0"
pandas = "^1.4.3"
streamlit = "^1.11.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
